[gd_scene load_steps=34 format=3 uid="uid://bfdsj5xxm3pmk"]

[ext_resource type="Script" path="res://world/Main.gd" id="1_4pghp"]
[ext_resource type="PackedScene" uid="uid://cvqooawhyqyqw" path="res://player/test_player.tscn" id="2_6cywo"]
[ext_resource type="Resource" uid="uid://bh01ctte20kgj" path="res://test_inv.tres" id="3_en235"]
[ext_resource type="Script" path="res://UI/HUD/Inventory/inv_interface.gd" id="4_n1lqp"]
[ext_resource type="PackedScene" uid="uid://cfdnj6i52mb6u" path="res://UI/HUD/Inventory/inventory.tscn" id="5_vebsm"]
[ext_resource type="FontFile" uid="uid://cmmsfh84jhs03" path="res://Esperanto SmallCaps Regular.ttf" id="6_3njpv"]
[ext_resource type="PackedScene" uid="uid://012ymk0c663s" path="res://UI/HUD/Inventory/slot.tscn" id="7_ntpok"]
[ext_resource type="Texture2D" uid="uid://vyoaqybnkohy" path="res://UI/references/Screenshot 2025-03-01 184534.png" id="8_ab6c3"]
[ext_resource type="PackedScene" uid="uid://cirndjnad781d" path="res://interactable/cabinet.tscn" id="9_qu4lt"]
[ext_resource type="Script" path="res://UI/HUD/Inventory/inventory_data.gd" id="10_gtidb"]
[ext_resource type="Script" path="res://UI/HUD/Inventory/slot_data.gd" id="11_kkf2v"]
[ext_resource type="Resource" uid="uid://bwot2yqefnhhg" path="res://UI/HUD/Inventory/item/items/canned_peaches.tres" id="12_53f3x"]
[ext_resource type="Resource" uid="uid://c5nfndoha1o4d" path="res://UI/HUD/Inventory/item/items/canned_corn.tres" id="13_amrmn"]
[ext_resource type="Resource" uid="uid://bkbdbmb5d5bx4" path="res://UI/HUD/Inventory/item/items/armor_plate.tres" id="14_1yhix"]
[ext_resource type="PackedScene" uid="uid://cgk7inheywfs4" path="res://UI/HUD/Inventory/item/pickup.tscn" id="15_acbsn"]
[ext_resource type="Resource" uid="uid://c8uywm5gome0f" path="res://UI/HUD/Inventory/item/items/salted_crackers.tres" id="16_2upln"]
[ext_resource type="PackedScene" uid="uid://2f5p0imqkb4d" path="res://interactable/tent.tscn" id="17_yj8xa"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_5q6bn"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_k8bdq"]
sky_material = SubResource("ProceduralSkyMaterial_5q6bn")

[sub_resource type="Environment" id="Environment_6i4hk"]
background_mode = 2
sky = SubResource("Sky_k8bdq")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cfhuv"]
bg_color = Color(0.0313726, 0.0313726, 0.0313726, 0.823529)

[sub_resource type="Resource" id="Resource_0x1mb"]
script = ExtResource("11_kkf2v")
item_data = ExtResource("12_53f3x")
quantity = 1

[sub_resource type="Resource" id="Resource_hynmj"]
script = ExtResource("11_kkf2v")
item_data = ExtResource("13_amrmn")
quantity = 1

[sub_resource type="Resource" id="Resource_nf06m"]
script = ExtResource("11_kkf2v")
item_data = ExtResource("12_53f3x")
quantity = 1

[sub_resource type="Resource" id="Resource_3xxho"]
script = ExtResource("11_kkf2v")
item_data = ExtResource("13_amrmn")
quantity = 1

[sub_resource type="Resource" id="Resource_a1b4j"]
script = ExtResource("10_gtidb")
slot_datas = Array[ExtResource("11_kkf2v")]([SubResource("Resource_0x1mb"), SubResource("Resource_hynmj"), SubResource("Resource_nf06m"), null, null, SubResource("Resource_3xxho"), null, null])

[sub_resource type="Resource" id="Resource_j8mh1"]
script = ExtResource("11_kkf2v")
item_data = ExtResource("12_53f3x")
quantity = 1

[sub_resource type="Resource" id="Resource_r7eym"]
script = ExtResource("11_kkf2v")
item_data = ExtResource("14_1yhix")
quantity = 1

[sub_resource type="Resource" id="Resource_dbrre"]
script = ExtResource("11_kkf2v")
item_data = ExtResource("14_1yhix")
quantity = 1

[sub_resource type="Resource" id="Resource_nd1cv"]
script = ExtResource("11_kkf2v")
item_data = ExtResource("13_amrmn")
quantity = 1

[sub_resource type="Resource" id="Resource_wjmi3"]
script = ExtResource("10_gtidb")
slot_datas = Array[ExtResource("11_kkf2v")]([SubResource("Resource_j8mh1"), null, null, null, SubResource("Resource_r7eym"), SubResource("Resource_dbrre"), SubResource("Resource_nd1cv"), null, null, null])

[sub_resource type="Resource" id="Resource_kvejm"]
script = ExtResource("11_kkf2v")
item_data = ExtResource("16_2upln")
quantity = 10

[sub_resource type="Resource" id="Resource_apgk0"]
script = ExtResource("10_gtidb")
slot_datas = Array[ExtResource("11_kkf2v")]([])

[node name="TestRoom" type="Node"]
script = ExtResource("1_4pghp")

[node name="Environment" type="Node" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_6i4hk")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 0.906507, 0.422191, 0, -0.422191, 0.906507, 0, 5.90056, 4.75698)

[node name="Room" type="Node" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="Room"]
use_collision = true
size = Vector3(30, 1, 30)

[node name="CSGBox3D2" type="CSGBox3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.55773, -14.0047)
use_collision = true
size = Vector3(30, 10, 2)

[node name="CSGBox3D3" type="CSGBox3D" parent="Room"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -14, 4.55773, -0.00471497)
use_collision = true
size = Vector3(30, 10, 2)

[node name="test_player" parent="." instance=ExtResource("2_6cywo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.36588, 0)
inventory_data = ExtResource("3_en235")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cfhuv")

[node name="InvInterface" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_n1lqp")

[node name="ExternalInv" parent="UI/InvInterface" instance=ExtResource("5_vebsm")]
visible = false
layout_mode = 2
offset_left = 134.0
offset_top = 190.0
offset_right = 584.0
offset_bottom = 890.0
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="SourceLabel" type="Label" parent="UI/InvInterface"]
layout_mode = 2
offset_left = 306.0
offset_top = 147.0
offset_right = 412.0
offset_bottom = 170.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("6_3njpv")
theme_override_font_sizes/font_size = 20
text = "CONTAINER"

[node name="PlayerInv" parent="UI/InvInterface" instance=ExtResource("5_vebsm")]
layout_mode = 2
offset_left = 1346.0
offset_top = 194.0
offset_right = 1796.0
offset_bottom = 832.0
size_flags_horizontal = 2

[node name="InventoryLabel" type="Label" parent="UI/InvInterface"]
layout_mode = 2
offset_left = 1525.0
offset_top = 151.0
offset_right = 1632.0
offset_bottom = 174.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("6_3njpv")
theme_override_font_sizes/font_size = 20
text = "INVENTORY"
horizontal_alignment = 1

[node name="GrabbedSlot" parent="UI/InvInterface" instance=ExtResource("7_ntpok")]
visible = false
modulate = Color(1, 1, 1, 0.482353)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_right = 80.0
offset_bottom = 80.0
size_flags_horizontal = 3

[node name="Reference" type="TextureRect" parent="UI/InvInterface"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_ab6c3")
expand_mode = 3

[node name="Cabinet" parent="." instance=ExtResource("9_qu4lt")]
transform = Transform3D(0.944775, 0, 0.337813, 0, 1.00335, 0, -0.337813, 0, 0.944775, 0, 0.493376, -10.7037)
inventory_data = SubResource("Resource_a1b4j")

[node name="Cabinet2" parent="." instance=ExtResource("9_qu4lt")]
transform = Transform3D(1.82095, 0, -0.337825, 0, 2.6, 0, 0.943044, 0, 0.652315, 2.66691, 0.5, -11.5848)
inventory_data = SubResource("Resource_wjmi3")

[node name="Pickup" parent="." instance=ExtResource("15_acbsn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.94875, 1.65384, 0)
slot_data = SubResource("Resource_kvejm")

[node name="Tent" parent="." instance=ExtResource("17_yj8xa")]
transform = Transform3D(2.52807, 0, 3.76887, 0, 2.22812, 0, -3.31077, 0, 2.87787, -9.27392, 0.507343, 0)
inventory_data = SubResource("Resource_apgk0")

[connection signal="drop_slot_data" from="UI/InvInterface" to="." method="_on_inv_interface_drop_slot_data"]
[connection signal="gui_input" from="UI/InvInterface" to="UI/InvInterface" method="_on_gui_input"]
[connection signal="visibility_changed" from="UI/InvInterface" to="UI/InvInterface" method="_on_visibility_changed"]
